# QtRAR

./: CMakeLists.txt  qtrar.pro
patch/: 0002-Disable-SSE-on-MSVC-with-Clang.patch
src/: src.pri  src.pro
src/unrar/: os.hpp  unrar.pri  unrar.pro
